tests/errors/type_check/error_span/structured_deref_of_non_pointer.err.expected
error: at 5:17: [TC-DerefOfNonPointer] In function 'f', block 'entry': Cannot dereference non-pointer type i64
   |
 5 |                 y = copy x.*;
   |                 ^^^^^^^^^^^^
